[tool.black]
line-length = 99
target-version = ["py39", "py310"]
exclude = '''
/(
    \.git|.venv
)/
'''

[tool.isort]
profile = "black"
float_to_top = true
skip_glob = ".venv"

[tool.poetry]
name = "komposer"
version = "0.1.0dev11"
description = "Tool to convert a Docker Compose file into a Kubernetes manifest"
repository = "https://github.com/expobrain/komposer"
authors = ["Daniele Esposti <daniele.esposti@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "komposer" }]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
pydantic = "^1.9.1"
PyYAML = "^6.0"
stringcase = "^1.2.0"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
black = "^22.1"
isort = "^5.10.1"
mypy = "^0.961"
pdbpp = "^0.10.3"
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
pyupgrade = "^2.31.1"
pytest-testmon = "^1.3.3"
types-PyYAML = "^6.0.8"
pytest-clarity = "^1.0.1"
flake8-bugbear = "^22.4.25"
pytest-mock = "^3.8.1"

[tool.poetry.scripts]
komposer = "komposer.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = ".venv/"
plugins = ["pydantic.mypy"]
check_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_subclassing_any = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true

[[tool.mypy.overrides]]
module = "stringcase"
ignore_missing_imports = true
